trunk/Archive2/43/20a36d357ad5d6/output
clang version 3.4 (tags/RELEASE_34/final 206911)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:14:7: error: too few arguments to function call, expected 1, have 0
    f();
    ~ ^
main.cpp:8:9: note: 'f' declared here
        friend void outer::f(bool);
        ^
1 error generated.
