trunk/Archive2/43/20a36d357ad5d6/main.cpp
struct outer
{
    void f(bool = true) {}
    void a();
    
    struct inner
    {
        friend void outer::f(bool);
    };
};

void outer::a()
{
    f();
}

int main()
{
    outer().a();
}



